@@ -33,6 +33,7 @@ enum GUMPCTL_TYPE	// controls we can put in a gump.
 
 	GUMPCTL_PAGE,			// 1 = set current page number	// for multi tab dialogs.
 
+	GUMPCTL_PICINPIC,
 	GUMPCTL_RADIO,			// 6 = x,y,gump1,gump2,starting state,id
 	GUMPCTL_RESIZEPIC,		// 5 = x,y,gumpback,sx,sy	// can come first if multi page. put up some background gump
 	GUMPCTL_TEXT,			// 4 = x,y,color?,startstringindex	// put some text here.
@@ -81,6 +82,7 @@ LPCTSTR const CDialogDef::sm_szLoadKeys[GUMPCTL_QTY+1] =
 
 	"page",
 
+	"picinpic",
 	"radio",
 	"resizepic",
 	"text",
@@ -227,6 +229,20 @@ bool CDialogDef::r_Verb( CScript & s, CTextConsole * pSrc )	// some command on t
 			GET_ABSOLUTE( id );
 
 			m_sControls[m_iControls].Format( "gumppictiled %d %d %d %d %d", x, y, sX, sY, id );
+			m_iControls++;
+			return true;
+		}
+		case GUMPCTL_PICINPIC:
+		{
+			GET_RELATIVE(x, m_iOriginX);
+			GET_RELATIVE(y, m_iOriginY);
+			GET_ABSOLUTE(id);
+			GET_ABSOLUTE(w);
+			GET_ABSOLUTE(h);
+			GET_ABSOLUTE(sX);
+			GET_ABSOLUTE(sY);
+
+			m_sControls[m_iControls].Format("picinpic %d %d %d %d %d %d %d", x, y, id, w, h, sX, sY);
 			m_iControls++;
 			return true;
 		}
